--- a/style.css
+++ b/style.css
@@ -1,4 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100;500;700&display=swap');
 
 * {
   padding: 0;
@@ -42,17 +41,23 @@ header {
   display: none;
 }
 
-.statusbar {
+.status {
   right: 30px;
   position: absolute;
 }
 
-.bar {
-  width: 25px;
+.parallel {
+  width: 20px;
   height: 3px;
   border-radius: 1px;
-  margin: 3px 0;
+  margin: 1px 0;
   background: #6070ff;
+}
+
+.parallel img {
+  width: 20px;
+  height: 3px;
+  border-radius: 1px;
 }
 
 #sectionA {
@@ -428,7 +433,7 @@ header {
 }
 
 form {
-  margin-top: 30px;
+  margin-top: 3rem;
   text-align: center;
   margin-bottom: 90px;
 }
@@ -522,7 +527,7 @@ form {
     margin-right: 150px;
   }
 
-  .statusbar {
+  .status {
     display: none;
   }
 
