adding blur effect

--- a/style.css
+++ b/style.css
@@ -512,12 +512,17 @@ form {
   position: fixed;
   top: -0.9rem;
   display: none;
-  background-color: #6070ffce;
-  width: 100%;
-  height: 100vh;
+  background-color: #2435c5ce;
+  width: 375px;
+  height: 750px;
   transition: 0.3s;
   left: 0;
   z-index: 10;
+  margin-bottom: 0;
+}
+
+.hom2 {
+  color: #fff;
 }
 
 .content1 {
