--- a/style.css
+++ b/style.css
@@ -518,12 +518,13 @@ form {
   transition: 0.3s;
   left: 0;
   z-index: 10;
-  margin-bottom: 0rem;
+  margin-bottom: 0;
 }
 
-.hom2{
+.hom2 {
   color: #fff;
 }
+
 .content1 {
   margin-top: 3rem;
   text-align: left;
