--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ header {
 }
 
 #sectionA {
-  background-image: url("./Images/fon.png");
+  background-image: url("./assets/Images/fon.png");
   background-repeat: no-repeat;
   background-size: cover;
   max-width: 100%;
@@ -429,7 +429,7 @@ form {
 }
 
 .sectfour {
-  background-image: ("../Images/formpic.png");
+  background-image: ("../assets/Images/formpic.png");
   background-position: right;
   background-repeat: no-repeat;
   height: auto;
@@ -543,6 +543,102 @@ form {
   cursor: pointer;
 }
 
+#comeout {
+  display: none;
+}
+
+.completwork {
+  width: 100%;
+  height: 100%;
+  background: #30313371;
+  display: flex;
+  justify-content: center;
+}
+
+.container {
+  width: 80%;
+  height: auto;
+  background: #ffff;
+  border-radius: 25px;
+  position: absolute;
+  top: 25%;
+  left: 8%;
+  display: flex;
+  flex-direction: column;
+  padding: 16px;
+  font-family: 'Poppins', sans-serif;
+  box-shadow: 10px 8px 119px 200px rgba(0, 0, 0, 0.45);
+  -webkit-box-shadow: 10px 8px 119px 200px rgba(0, 0, 0, 0.45);
+  -moz-box-shadow: 10px 8px 119px 200px rgba(0, 0, 0, 0.45);
+}
+
+.picture {
+  width: 30px;
+  position: absolute;
+  right: 15px;
+  cursor: pointer;
+}
+
+.param {
+  width: 100%;
+}
+
+.param h1 {
+  color: #091e42;
+  font-size: 40px;
+  font-weight: 700;
+}
+
+.list,
+.cartigory {
+  display: inline-block;
+  margin: 5px 25px 5px 0;
+  font-size: 15px;
+  color: #344563;
+}
+
+.pics {
+  width: auto;
+  height: 700px;
+}
+
+.wkstwo {
+  font-size: 16px;
+  color: #344563;
+  margin: 10px 0;
+}
+
+.Code,
+.codlist {
+  display: inline-block;
+}
+
+.booton {
+  width: 100%;
+  height: auto;
+  display: flex;
+  justify-content: flex-end;
+}
+
+.buttout {
+  padding: 8px 20px;
+  background: transparent;
+  color: #6070ff;
+  border: 1.5px solid #6070ff;
+  border-radius: 6px;
+  margin: 10px 12px;
+  text-align-last: justify;
+}
+
+.buttout:hover {
+  background: #6070ff;
+  color: #fff;
+}
+
+.buttout:active {
+  background: #2230d2;
+}
+
 @media screen and (min-width: 768px) {
   header {
     padding: 0 0;
@@ -577,7 +673,7 @@ form {
   }
 
   #sectionA {
-    background-image: url("./Images/formpic.png");
+    background-image: url("./assets/Images/formpic.png");
     background-image: cover;
     max-width: 100%;
     margin-top: 56px;
@@ -765,7 +861,7 @@ form {
   }
 
   .sectfour {
-    background-image: url('./Images/lastman.png');
+    background-image: url('./assets/Images/lastman.png');
     background-size: cover;
     max-width: 100%;
   }
@@ -816,5 +912,33 @@ form {
     display: flex;
     gap: 3rem;
     font-size: 10px;
+  }
+
+  .booton {
+    justify-content: center;
+  }
+
+  .buttout {
+    font-size: 12px;
+    padding: 6px 25px;
+  }
+
+  .picture {
+    width: 20px;
+    cursor: pointer;
+  }
+
+  .img {
+    width: auto;
+    height: 300px;
+  }
+
+  .container {
+    left: 6.5%;
+  }
+
+  .codlist {
+    margin: 9px 7px;
+    float: left;
   }
 }
