--- a/style.css
+++ b/style.css
@@ -603,35 +603,31 @@ form {
 }
 
 .wkstwo {
-  font-size: 8px;
-  color: #344563;
-  margin: -14px 0;
+  font-size: 15px;
+  color: rgb(52, 69, 99);
+  margin: 1rem 0 -14px;
   width: 100%;
-  height: 110%;
-  margin-top: 1rem;
 }
 
 .Code,
 .codlist {
   display: inline-block;
-  margin-top: -43px;
+  margin-top: -26px;
 }
 
 .codlist {
-  margin: 55px 38px 3px -43px;
+  margin: 63px 38px 3px -16px;
   background: #ebebff;
   font-weight: 500;
-  font-size: 11px;
+  font-size: 15px;
   color: #6070ff;
   padding: 4px 12px;
   border-radius: 10px;
   float: right;
-  width: auto;
-  height: auto;
 }
 
 .booton {
-  margin-left: 10px;
+  margin-left: -73px;
   font-size: 10px;
   width: 100%;
   height: auto;
@@ -957,8 +953,13 @@ form {
   }
 
   .buttout {
-    font-size: 12px;
-    padding: 6px 25px;
+    padding: 8px 20px;
+    background: transparent;
+    color: #6070ff;
+    border: 1.5px solid #6070ff;
+    border-radius: 6px;
+    margin: 10px 12px;
+    text-align-last: justify;
   }
 
   .picture {
@@ -980,7 +981,7 @@ form {
     margin: 9px 38px 5px 0;
     background: #ebebff;
     font-weight: 500;
-    font-size: 12px;
+    font-size: 16px;
     color: #6070ff;
     padding: 4px 12px;
     border-radius: 10px;
