arrangement of the error functionality

--- a/style.css
+++ b/style.css
@@ -646,6 +646,11 @@ form {
   text-align-last: justify;
 }
 
+#error {
+  color: #fff;
+  margin: -4px;
+}
+
 .buttout:hover {
   background: #6070ff;
   color: #fff;
@@ -1005,5 +1010,18 @@ form {
 
   #reservtext {
     color: #fff;
+  }
+
+  form {
+    margin-top: -13px;
+    text-align: center;
+    margin-bottom: 90px;
+  }
+
+  .pras {
+    font-weight: 400;
+    font-size: 15px;
+    width: 50%;
+    margin: 0 25%;
   }
 }
