--- a/styles.css
+++ b/styles.css
@@ -15,17 +15,49 @@ body {
 }
 
 @keyframes vibrate {
-  0% { transform: rotate(0deg); }
-  10% { transform: rotate(-1deg); }
-  20% { transform: rotate(1deg); }
-  30% { transform: rotate(0deg); }
-  40% { transform: rotate(1deg); }
-  50% { transform: rotate(-1deg); }
-  60% { transform: rotate(0deg); }
-  70% { transform: rotate(-1deg); }
-  80% { transform: rotate(1deg); }
-  90% { transform: rotate(0deg); }
-  100% { transform: rotate(-1deg); }
+  0% {
+    transform: rotate(0deg);
+  }
+
+  10% {
+    transform: rotate(-1deg);
+  }
+
+  20% {
+    transform: rotate(1deg);
+  }
+
+  30% {
+    transform: rotate(0deg);
+  }
+
+  40% {
+    transform: rotate(1deg);
+  }
+
+  50% {
+    transform: rotate(-1deg);
+  }
+
+  60% {
+    transform: rotate(0deg);
+  }
+
+  70% {
+    transform: rotate(-1deg);
+  }
+
+  80% {
+    transform: rotate(1deg);
+  }
+
+  90% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(-1deg);
+  }
 }
 
 @keyframes textclip {
@@ -319,25 +351,69 @@ body {
   gap: 12px;
 }
 
+.pop-img img {
+  width: 100%;
+  height: 100%;
+}
+
 .works-img img {
   width: 100%;
   height: 100%;
 }
 
+.infoline img,
+.pop-infoline img {
+  background: #c1c7d0;
+  width: 6px;
+  height: 6px;
+  margin-top: 5px;
+  justify-content: center;
+  align-content: center;
+}
+
+.work-languages img,
+.pop-languages img {
+  padding-right: 10px;
+}
+
+.pop-btn img {
+  position: relative;
+  top: 5px;
+  right: -5px;
+  width: 30px;
+}
+
+.contact-info img {
+  width: 134px;
+  height: 5px;
+  align-self: center;
+}
+
+.ul-categories img {
+  width: 100%;
+  height: auto;
+}
+
+.ul-categories img:hover {
+  animation: vibrate 0.5s;
+
+  /* animation keep looping */
+  animation-iteration-count: infinite;
+}
+
+.ul-categories1 {
+  display: none;
+}
+
 .works-img img:hover {
   animation: vibrate 0.5s;
 
-  /*animation keep looping */
+  /* animation keep looping */
   animation-iteration-count: infinite;
 }
 
 .pop-img {
   padding-bottom: 1.6%;
-}
-
-.pop-img img {
-  width: 100%;
-  height: 100%;
 }
 
 .works h2 {
@@ -409,16 +485,6 @@ body {
   padding-bottom: 7%;
 }
 
-.infoline img,
-.pop-infoline img {
-  background: #c1c7d0;
-  width: 6px;
-  height: 6px;
-  margin-top: 5px;
-  justify-content: center;
-  align-content: center;
-}
-
 .work-languages ul {
   margin: 0;
   padding: 0;
@@ -435,11 +501,6 @@ body {
   padding-top: 10px;
   padding-inline-start: 0;
   gap: 10px;
-}
-
-.work-languages img,
-.pop-languages img {
-  padding-right: 10px;
 }
 
 .work-btn,
@@ -477,13 +538,6 @@ body {
   padding-bottom: 5px;
 }
 
-.pop-btn img {
-  position: relative;
-  top: 5px;
-  right: -5px;
-  width: 30px;
-}
-
 .work-btn:hover,
 .getresume-btn:hover {
   color: white;
@@ -503,22 +557,6 @@ body {
   list-style-type: none;
   padding-left: 0;
   padding-bottom: 15px;
-}
-
-.ul-categories img {
-  width: 100%;
-  height: auto;
-}
-
-.ul-categories img:hover {
-  animation: vibrate 0.5s;
-
-  /* animation keep looping */
-  animation-iteration-count: infinite;
-}
-
-.ul-categories1 {
-  display: none;
 }
 
 .contactform-section {
@@ -549,12 +587,6 @@ body {
   color: #ebebff;
   text-align: center;
   padding-bottom: 40px;
-}
-
-.contact-info img {
-  width: 134px;
-  height: 5px;
-  align-self: center;
 }
 
 .contact-input-form {
@@ -890,6 +922,10 @@ body {
     padding-bottom: 15px;
   }
 
+  .contact-info img {
+    display: none;
+  }
+
   .ul-categories1 img {
     width: 100%;
     height: auto;
@@ -931,10 +967,6 @@ body {
   #label-email {
     top: -38px;
     left: 0;
-  }
-
-  .contact-info img {
-    display: none;
   }
 
   .contact-form {
